# EDA_competition

./: .gitignore  CMakeLists.txt  README.md  TransistorPlacer.py  batch_test.py  best.json  data.csv  data_parse.py  demo.py  error.json  log.txt  log_cplus.txt  log_python.txt  low_score_case.txt  main.py  model.pt  my_evaluator.py  output.json  parse.py  result.csv  result_cplus.csv  solver.cpp  solver.h  solver.py  solver_cplus.py  temp.json  test.txt  test1.nets  train.py  visualize.py  编译优化命令.txt
batch_test_result/: log_python.txt
c++_src/: solver.cpp  solver.h
commit/: README.txt  data_parse.py  main.py  my_evaluator.py  solver.py  visualize.py
public/: .README.swp  README  cells.spi  evaluator.py  example_NAND2V4.json  log
result/batch_test_result/: log_python.txt
test_case/: cells.spi  output.json  test.json
